rename basic block caching lib

--- a/src/BBCache/BBCache.fsproj
+++ b/src/BBCache/BBCache.fsproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TraceServer\TraceServer.fsproj" />
+    <ProjectReference Include="..\Cache\Cache.fsproj" />
   </ItemGroup>
 
 </Project>
