--- a/src/BBClient/Cargo.toml
+++ b/src/BBClient/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2018"
 
 [dependencies]
 zydis = { git = "https://github.com/zyantific/zydis-rs"}
+gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_22"] }
 tabwriter = "1.1.0"
 redis = "0.9.1"
 structopt = "0.2.12"
 strum = "0.11.0"
 strum_macros = "0.11.0"
 lazy_static = "1.1.0"
-failure = "0.1.2"
+failure = "0.1.3"
