--- a/src/BBCache/BBCache.fsproj
+++ b/src/BBCache/BBCache.fsproj
@@ -13,4 +13,9 @@
     <ProjectReference Include="..\Cache\Cache.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Argu" Version="5.1.0" />
+    <PackageReference Include="ShellProgressBar" Version="4.2.0" />
+  </ItemGroup>
+
 </Project>
