--- a/src/BBClient/Cargo.toml
+++ b/src/BBClient/Cargo.toml
@@ -17,3 +17,6 @@ failure = "0.1.3"
 scroll = "0.9.2"
 lru = "0.1.8"
 fasthash = "0.3.2"
+xed-sys = { path = "../../../xed-sys" }
+maplit = "1.0.1"
+indicatif = "0.9.0"
