--- a/src/BBClient/Cargo.toml
+++ b/src/BBClient/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 zydis = { git = "https://github.com/zyantific/zydis-rs"}
-gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_22"] }
+# gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_22"] }
 tabwriter = "1.1.0"
 redis = "0.9.1"
 structopt = "0.2.12"
@@ -17,6 +17,6 @@ failure = "0.1.3"
 scroll = "0.9.2"
 lru = "0.1.8"
 fasthash = "0.3.2"
-xed-sys = { path = "../../../xed-sys" }
+# xed-sys = { path = "../../../xed-sys" }
 maplit = "1.0.1"
 indicatif = "0.9.0"
